objects/fferpcore__ConfigurationItem__mdt.object
<CustomObject>
    <description>Stores configuration data used by FinancialForce processes.</description>
    <fields>
        <fullName>fferpcore__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates that the record is enabled.</description>
        <inlineHelpText>Indicates that the record is enabled.</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__ItemKey__c</fullName>
        <description>Identifier for this record or group of records.</description>
        <inlineHelpText>Identifier for this record or group of records.</inlineHelpText>
        <label>Identifier</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ItemType__c</fullName>
        <description>Name of the process that this Foundations configuration item relates to.</description>
        <inlineHelpText>Name of the process that this Foundations configuration item relates to.</inlineHelpText>
        <label>Process</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__LargeData__c</fullName>
        <description>Data that defines the record&apos;s processes and exceeds 255 characters. Querying this field contributes to query limits in Salesforce.</description>
        <inlineHelpText>Data that defines the record&apos;s processes and exceeds 255 characters. Querying this field contributes to query limits in Salesforce.</inlineHelpText>
        <label>Large Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__SObjectField__c</fullName>
        <description>A Salesforce field that relates to the object specified and is used by the configuration item&apos;s processes. Defining the field ensures that it cannot be deleted.</description>
        <inlineHelpText>A Salesforce field that relates to the object specified and is used by the configuration item&apos;s processes. Defining the field ensures that it cannot be deleted.</inlineHelpText>
        <label>Field</label>
        <metadataRelationshipControllingField>fferpcore__ConfigurationItem__mdt.fferpcore__SObjectType__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>FinancialForce_Configuration_Items</relationshipLabel>
        <relationshipName>FinancialForce_Configuration_Items</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>fferpcore__SObjectType__c</fullName>
        <description>A Salesforce standard, custom, or platform event object that is used by the configuration item&apos;s processes. Defining the object ensures that it cannot be deleted.</description>
        <inlineHelpText>A Salesforce standard, custom, or platform event object that is used by the configuration item&apos;s processes. Defining the object ensures that it cannot be deleted.</inlineHelpText>
        <label>Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>FinancialForce Configuration Items</relationshipLabel>
        <relationshipName>FinancialForceConfigurationItems</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>fferpcore__SmallData__c</fullName>
        <description>Data that defines the record&apos;s processes and does not exceed 255 characters. Querying this field does not contribute to query limits in Salesforce.</description>
        <inlineHelpText>Data that defines the record&apos;s processes and does not exceed 255 characters. Querying this field does not contribute to query limits in Salesforce.</inlineHelpText>
        <label>Small Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Foundations Configuration Item</label>
    <pluralLabel>Foundations Configuration Items</pluralLabel>
</CustomObject>